Add an error return
